Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -380,6 +380,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats.ttest_ind(experimental,con)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
