--- a/index.ipynb
+++ b/index.ipynb
@@ -381,11 +381,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-1.8915462966190273, pvalue=0.061504240672530394)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "stats.ttest_ind(experimental,con)"
+    "stats.ttest_ind(experimental,control)"
    ]
   },
   {
