Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
@@ -203,20 +203,20 @@
        "1.910750304668021"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "denom = math.sqrt((control_std_sq/len_control-1)+(ex_std_sq/len_ex-1))\n",
+    "denom = math.sqrt((control_std_sq/len_control)+(ex_std_sq/len_ex))\n",
     "t_stat = numer/denom\n",
     "t_stat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "metadata": {
     "scrolled": true
    },
@@ -227,7 +227,7 @@
        "5.139342370381643"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
