Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ex_var= experimental.var()\n",
+    "control.var()\n",
+    "denom2= "
+   ]
   },
   {
    "cell_type": "code",
