Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -272,8 +272,8 @@
    "outputs": [],
    "source": [
     "ex_var= experimental.var()\n",
-    "control.var()\n",
-    "denom2= "
+    "cont_var = control.var()\n",
+    "denom2= (ex_var**2 + cont_var**2"
    ]
   },
   {
