Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -273,7 +273,7 @@
    "source": [
     "ex_var= experimental.var()\n",
     "cont_var = control.var()\n",
-    "denom2= ((len_ex -1) *(ex_var**2)) + ()(cont_var**2)"
+    "denom2= (((len_ex -1) *(ex_var**2)) + ((len_control-1)*(cont_var**2)))/len_control"
    ]
   },
   {
