Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,13 +267,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.106413914403891e-05"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ex_var= experimental.var()\n",
     "cont_var = control.var()\n",
-    "denom2= (((len_ex -1) *(ex_var**2)) + ((len_control-1)*(cont_var**2)))/len_control"
+    "denom2= (((len_ex -1) *(ex_var**2)) + ((len_control-1)*(cont_var**2)))/len_control+len_ex-2\n",
+    "numer/denom2"
    ]
   },
   {
