--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,9 @@
    "source": [
     "ex_var= experimental.var()\n",
     "cont_var = control.var()\n",
-    "denom2= (((len_ex -1) *(ex_var**2)) + ((len_control-1)*(cont_var**2)))/len_control+len_ex-2\n",
+    " = (((len_ex -1) *(ex_var**2)) + ((len_control-1)*(cont_var**2)))/len_control+len_ex-2\n",
+    "\n",
+    "denom2\n",
     "numer/denom2"
    ]
   },
