Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,16 +267,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-36-5f29554a60e6>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-36-5f29554a60e6>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    numer/denom2\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.0010423523703357806"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -284,7 +286,7 @@
     "cont_var = control.var()\n",
     "pooled2 = (((len_ex -1) *(ex_var**2)) + ((len_control-1)*(cont_var**2)))/len_control+len_ex-2\n",
     "\n",
-    "denom2 = math.sqrt(pooled2*(((len_control/1)+(len_ex/1)))\n",
+    "denom2 = math.sqrt(pooled2*((len_control/1)+(len_ex/1)))\n",
     "numer/denom2"
    ]
   },
