Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -267,16 +267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0010423523703357806"
+       "0.05211761851678903"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +286,7 @@
     "cont_var = control.var()\n",
     "pooled2 = (((len_ex -1) *(ex_var**2)) + ((len_control-1)*(cont_var**2)))/len_control+len_ex-2\n",
     "\n",
-    "denom2 = math.sqrt(pooled2*((len_control/1)+(len_ex/1)))\n",
+    "denom2 = math.sqrt(pooled2*((1/len_control)+(1/len_ex)))\n",
     "numer/denom2"
    ]
   },
