--- a/index.ipynb
+++ b/index.ipynb
@@ -487,23 +487,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.061713104303855494\n"
+      "0.06150424067253037\n"
      ]
     }
    ],
    "source": [
     "## Calculate p_value\n",
     "# Lower tail comulative density function returns area under the lower tail curve\n",
-    "lower_tail = stats.t.cdf(-1.89, (50+50-2), 0, 1)\n",
+    "lower_tail = stats.t.cdf(-1.8915462966190273, (50+50-2), 0, 1)\n",
     "# Upper tail comulative density function returns area under upper tail curve\n",
-    "upper_tail = 1. - stats.t.cdf(1.89, (50+50-2), 0, 1)\n",
+    "upper_tail = 1. - stats.t.cdf(1.8915462966190273, (50+50-2), 0, 1)\n",
     "\n",
     "p_value = lower_tail+upper_tail\n",
     "print(p_value)"
