--- a/index.ipynb
+++ b/index.ipynb
@@ -382,7 +382,9 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -395,9 +397,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "stats.ttest_ind(experimental,control)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -518,9 +518,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=-1.8915462966190273, pvalue=0.061504240672530394)"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## your code here\n",
     "'''\n",
@@ -530,7 +541,7 @@
     "have identical average (expected) values. This test assumes that the\n",
     "populations have identical variances by default.\n",
     "'''\n",
-    "\n",
+    "# stats.ttest_ind(experimental,control)\n",
     "stats.ttest_ind(experimental, control)"
    ]
   },
