Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -401,22 +401,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.029275728490068344"
+       "0.030752120336265197"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "stats.norm.cdf(-1.8915462966190273)"
+    "stats.t.cdf(-1.8915462966190273,98,0,1)"
    ]
   },
   {
